telicent/bases/query/ui/istio/authorizationpolicy/allow-ingress-to-query-ui.yaml
#
# Copyright (C) 2024 Telicent Limited
#
apiVersion: security.istio.io/v1
kind: AuthorizationPolicy
metadata:
  name: allow-ingress-to-query-ui
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: query-ui
  action: ALLOW
  rules:
    - from:
        - source:
            principals: [] # Principals are patched when namespace service accounts are known (in profiles)
      to:
        - operation:
            methods: ["GET"]
